--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ package-lock.json
 yarn.lock
 .DS_Store
 
+.idea
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -79,10 +81,8 @@ web_modules/
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.*.local
+!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
